[finishes #162562747] A user should be able to login and get access to feature requiring authentication

--- a/authentication/signup.html
+++ b/authentication/signup.html
@@ -38,7 +38,7 @@
           <div class="clearfix">
             <a href="../index.html"><button type="submit" class="signupbtn">Sign Up</button></a>
           </div>
-          <p id="signin">Have an account? <span id="inner">Sign in Now</span></p>
+          <a href="signin.html" id="signin"><p id="signin">Have an account? <span id="inner">Sign in Now</span></p></a>
         </div>
       </form>  
     </div>
