--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a class="line">|</a>
       <a href="#about">Form</a>
       <a class="line">|</a>
-      <a id="anchorbutton"><button class="btn" id="signin">Sign In</button></a>
+      <a href="authentication/signin.html" id="anchorbutton"><button class="btn" id="signin">Sign In</button></a>
       <a href="authentication/signup.html"><button class="btn" id="signup">Sign Up</button></a>
     </div>
     <!--message section-->
