[start #162562793] A user should be able to post a question

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="nav">
       <a class="active" href="#home"><i class="fab fa-stack-overflow" id="stackicon"></i>StackOverflow-Lite</a>
       <a class="line">|</a>
-      <a href="#about">Form</a>
+      <a href="#about">Search</a>
       <a class="line">|</a>
       <a href="authentication/signin.html" id="anchorbutton"><button class="btn" id="signin">Sign In</button></a>
       <a href="authentication/signup.html"><button class="btn" id="signup">Sign Up</button></a>
