--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
       <div class="column3" style="background-color: #f2f2f2;">
         <div id="questionbackground">
-          <button id="btn3"></i>Ask A Question</button>
+          <a href="questions/questions.html"><button id="btn3">Ask A Question</button></a>
         </div>
         <div id="tagsbackground">
           <h4 class="info2"><i class="fas fa-tags column1icons"></i>Tags</h4>
