[start #162563209] A user should be able to delete a question they posted

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--content section-->
     <div class="row">
       <div class="column1" style="background-color:#f2f2f2; padding-top: 25px;">
-        <h4 class="info"><i class="fas fa-folder-open column1icons"></i>Communities</h4>
+        <h4 class="info"><i class="fas fa-folder-open column1icons"></i>Answers</h4>
         <h4 class="info"><i class="fas fa-book-open column1icons"></i>Questions</h4>
         <h4 class="info"><i class="fas fa-users column1icons"></i>Users</h4>
         <h4 class="info"><i class="fas fa-question-circle column1icons"></i>Help</h4>
