[finishes #162563209] A user should be able to delete a question they posted

--- a/questions/questions_detail.html
+++ b/questions/questions_detail.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="eng">
   <head>
     <meta charset="utf-8">
     <!--This meta tag is for device responsiveness-->
     <meta nanme="viewport" content="width=device=width, initial-scale=1.0">
-    <title>Landing Page</title> 
+    <title>questions</title> 
 
     <!--Googel fonts-->
     <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
@@ -14,7 +13,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
     <!--custom stylesheet-->
-    <link href="css/landingpage/landingpage.css" rel="stylesheet" type="text/css">
+    <link href="../css/landingpage/landingpage.css" rel="stylesheet" type="text/css">
+    <link href="../css/questions/question_detail.css" rel="stylesheet" type="text/css">
+
   </head>
 
   <body>
@@ -24,8 +25,8 @@
       <a class="line">|</a>
       <a href="#about">Search</a>
       <a class="line">|</a>
-      <a href="authentication/signin.html" id="anchorbutton"><button class="btn" id="signin">Sign In</button></a>
-      <a href="authentication/signup.html"><button class="btn" id="signup">Sign Up</button></a>
+      <a href="../authentication/signin.html" id="anchorbutton"><button class="btn" id="signin">Sign In</button></a>
+      <a href="../authentication/signup.html"><button class="btn" id="signup">Sign Up</button></a>
     </div>
     <!--message section-->
     <div id="media">
@@ -36,16 +37,16 @@
     <div class="row">
       <div class="column1" style="background-color:#f2f2f2; padding-top: 25px;">
         <h4 class="info"><i class="fas fa-folder-open column1icons"></i>Answers</h4>
-        <a class="link" href="questions/questions_detail.html"><h4 class="info"><i class="fas fa-book-open column1icons"></i>Questions</h4></a>
+        <h4 class="info"><i class="fas fa-book-open column1icons"></i>Questions</h4>
         <h4 class="info"><i class="fas fa-users column1icons"></i>Users</h4>
         <h4 class="info"><i class="fas fa-question-circle column1icons"></i>Help</h4>
       </div>
       <div class="column2" style="background-color:#ffffff">
-        <h2 class="info2">Top Questions</h2>
+        <h2 class="info2">My Questions</h2>
         <hr id="hr"/>
 
         <div class="question">
-            <img src="img/landingpage/buzzaldrin.jpg" alt="avatar" class="avatar" height="30px" width="30px"/>
+            <img src="../img/landingpage/buzzaldrin.jpg" alt="avatar" class="avatar" height="30px" width="30px"/>
             <p class="name">Mike Kinithia</p>
             <p class="time">Asked: 1min ago</p>
           <div>
@@ -54,14 +55,14 @@
           <div class="buttondetails">
             <span class="tags">5 answers</span>
             <span class="tags">0 votes</span>
-            <button class="answer">Answer</button>
+            <button class="answer2">Delete</button>
           </div>
         </div>
         <hr id="hr"/>
 
         <div class="question">
-            <img src="img/landingpage/girl.jpg" alt="avatar" class="avatar" height="30px" width="30px"/>
-            <p class="name">Lucy Kimani</p>
+            <img src="../img/landingpage/buzzaldrin.jpg" alt="avatar" class="avatar" height="30px" width="30px"/>
+            <p class="name">Mike Kinithia</p>
             <p class="time">Asked: 1min ago</p>
           <div>
             <p>Why shouldnt I use IFormFile for large uploads</p>
@@ -69,14 +70,14 @@
           <div class="buttondetails">
             <span class="tags">5 answers</span>
             <span class="tags">0 votes</span>
-            <button class="answer">Answer</button>
+            <button class="answer2">Delete</button>
           </div>
         </div>
         <hr id="hr"/>
 
         <div class="question">
-            <img src="img/landingpage/reddead.jpg" alt="avatar" class="avatar" height="30px" width="30px"/>
-            <p class="name">Neville Oronni</p>
+            <img src="../img/landingpage/buzzaldrin.jpg" alt="avatar" class="avatar" height="30px" width="30px"/>
+            <p class="name">Mike Kinithia</p>
             <p class="time">Asked: 1day ago</p>
           <div>
             <p> Passing parameters to gulp function-tasks</p>
@@ -84,7 +85,7 @@
           <div class="buttondetails">
             <span class="tags">5 answers</span>
             <span class="tags">0 votes</span>
-            <button class="answer">Answer</button>
+            <button class="answer2">Delete</button>
           </div>
         </div>
         <hr id="hr"/>
