--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <!--This meta tag is for device responsiveness-->
     <meta nanme="viewport" content="width=device=width, initial-scale=1.0">
-    <title>Landing Page</title> 
+    <title>StackOverflow-Lite</title> 
+    <link rel="icon" type="image/jpeg" href="img/landingpage/screencode.jpeg" style="border-radius: 50%;" sizes="196x196">
 
     <!--Googel fonts-->
     <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
