[finishes #162563444] A user should be able to post ansers to a question asked

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>How do you create a modal using pure html and css</p>
           </div>
           <div class="buttondetails">
-            <span class="tags">5 answers</span>
+            <a class="link" href="answers/answers.html"><span class="tags">5 answers</span></a>
             <span class="tags">0 votes</span>
             <button class="answer">Answer</button>
           </div>
@@ -68,7 +68,7 @@
             <p>Why shouldnt I use IFormFile for large uploads</p>
           </div>
           <div class="buttondetails">
-            <span class="tags">5 answers</span>
+            <span class="tags">0 answers</span>
             <span class="tags">0 votes</span>
             <button class="answer">Answer</button>
           </div>
@@ -83,7 +83,7 @@
             <p> Passing parameters to gulp function-tasks</p>
           </div>
           <div class="buttondetails">
-            <span class="tags">5 answers</span>
+            <span class="tags">0 answers</span>
             <span class="tags">0 votes</span>
             <button class="answer">Answer</button>
           </div>
