[finishes #162563604] A user should be able to mark an answer as favorite/preferred from a list of answers

--- a/answers/answers.html
+++ b/answers/answers.html
@@ -65,7 +65,7 @@
             <p class="name">Mike Kinithia</p>
             <p class="time">Aswered: 1min ago</p>
           <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            <p class="answertag">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
               sed do eiusmod tempor incididunt ut labore et dolore magna 
               aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
               ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -76,6 +76,7 @@
           </div>
           <div class="buttondetails">
             <span class="tags">0 votes</span>
+            <i class="fas fa-star" id="star"></i>
           </div>
         </div>
         <hr id="hr"/>
@@ -85,7 +86,7 @@
             <p class="name">Lucy Kimani</p>
             <p class="time">Aswered: 20min ago</p>
           <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            <p class="answertag">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                 sed do eiusmod tempor incididunt ut labore et dolore magna 
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
                 ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -96,6 +97,7 @@
           </div>
           <div class="buttondetails">
             <span class="tags">0 votes</span>
+            <i class="fas fa-star" id="star"></i>
           </div>
         </div>
         <hr id="hr"/>
@@ -105,17 +107,18 @@
             <p class="name">Neville Oronni</p>
             <p class="time">Aswered: 1day ago</p>
           <div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                  sed do eiusmod tempor incididunt ut labore et dolore magna 
-                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                  ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                  Duis aute irure dolor in reprehenderit in voluptate velit 
-                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-                  cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                   anim id est laborum.</p>
+                <p class="answertag">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna 
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit 
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                    cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                     anim id est laborum.</p>              
           </div>
           <div class="buttondetails">
-            <span class="tags">0 votes</span>
+            <span class="tags2">0 votes</span>
+            <i class="fas fa-star" id="star"></i>
           </div>
         </div>
         <hr id="hr"/>
