[start #162563355] A user should be able to post an answer to a question asked

--- a/answers/answers.html
+++ b/answers/answers.html
@@ -17,6 +17,7 @@
     <!--custom stylesheet-->
     <link href="../css/landingpage/landingpage.css" rel="stylesheet" type="text/css">
     <link href="../css/answers/answers.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
   </head>
 
@@ -122,7 +123,6 @@
           </div>
         </div>
         <hr id="hr"/>
-
         
       </div>
       <div class="column32" style="background-color: #f2f2f2;">
@@ -138,7 +138,7 @@
         </div>
       </div>
     </div>
-     
+    <script type="text/javascript" src="../js/script.js"></script>
   </body>
 
 
