[finishes #162563355] A user can post an anser to a question asked

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="buttondetails">
             <a class="link" href="answers/answers.html"><span class="tags">5 answers</span></a>
             <span class="tags">0 votes</span>
-            <button class="answer">Answer</button>
+            <a class="link" href="answers/answers2.html"><button class="answer">Answer</button></a>
           </div>
         </div>
         <hr id="hr"/>
@@ -70,7 +70,7 @@
           <div class="buttondetails">
             <span class="tags">0 answers</span>
             <span class="tags">0 votes</span>
-            <button class="answer">Answer</button>
+            <a class="link" href="answers/answers2.html"><button class="answer">Answer</button></a>
           </div>
         </div>
         <hr id="hr"/>
@@ -85,7 +85,7 @@
           <div class="buttondetails">
             <span class="tags">0 answers</span>
             <span class="tags">0 votes</span>
-            <button class="answer">Answer</button>
+            <a class="link" href="answers/answers2.html"><button class="answer">Answer</button></a>
           </div>
         </div>
         <hr id="hr"/>
